Fix blurry star in chrome, switch from a to li as nav elements, to prevent loading animation on windows, f ix multiple scrollbars

--- a/scss/components/_app.scss
+++ b/scss/components/_app.scss
@@ -42,5 +42,6 @@ $_border-radius: 10px;
 		flex: 1 0 0;
 		background-color: $color-grey;
 		overflow: scroll;
+		overflow-x: hidden;
 	}
 }
