--- a/scss/components/_list.scss
+++ b/scss/components/_list.scss
@@ -1,7 +1,6 @@
 .list {
 	padding: 10px 15px;
 	margin: 0;
-	overflow: scroll;
 	height: 100%;
 
 	&[data-filter="open"] {
