--- a/scss/components/_star.scss
+++ b/scss/components/_star.scss
@@ -20,20 +20,15 @@
 	&__inside {
 		cursor: pointer;
 		backface-visibility: hidden;
-		top: 50%;
-		left: 50%;
 		position: absolute;
-		transform: translate(-50%, -50%) scale(0.8);
+		transform: scale(0.8);
 		fill: $color-white;
 	}
 
 	&__outside {
 		cursor: pointer;
 		backface-visibility: hidden;
-		top: 50%;
-		left: 50%;
 		position: absolute;
-		transform: translate(-50%, -50%);
-		fill: $color-dark-grey;
+		fill: shade($color-dark-grey, 20%);
 	}
 }
